fix: Upadated Swagger for new endpoints
